--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Tawba - Code in the Ring | Full Stack Developer & Boxer</title>
+    <meta name="description" content="Full Stack Developer who fights bugs by day and trains by night. Combining boxing discipline with coding excellence for knockout web applications." />
+    <meta name="author" content="Tawba" />
+
+    <meta property="og:title" content="Tawba - Code in the Ring | Full Stack Developer & Boxer" />
+    <meta property="og:description" content="Full Stack Developer who fights bugs by day and trains by night. Combining boxing discipline with coding excellence for knockout web applications." />
+    <meta property="og:type" content="website" />
   </head>
+
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
